syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tingshulien.grpc.streaming.server.model";

message DepositRequest {
  oneof request {
    int32 account_number = 1;
    int32 amount = 2;
  }
}

message AccountBalance {
  int32 account_number = 1;
  int32 balance = 2;
}

enum ValidationCode {
  INVALID_ACCOUNT = 0;
  INVALID_AMOUNT = 1;
  INSUFFICIENT_BALANCE = 2;
}

service BankService {
  rpc Deposit(stream DepositRequest) returns (AccountBalance);
}